// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders the component with an order prop that has a shipping address but no billing address 1`] = `
<section
  aria-label="Order Addresses"
  class="flex place-content-between"
>
  <section
    aria-labelledby="shipping-address"
    class="grid gap-3"
  >
    <h4
      class="font-semibold"
      id="shipping-address"
    >
      Shipping Address
    </h4>
     
    <address
      class="space-y-0.5 not-italic text-muted-foreground"
    >
      <div>
        Firstname Lastname
      </div>
       
      <div>
        117 1st Ave.
      </div>
       
      <div>
        Phoenix, NY 60975
      </div>
    </address>
  </section>
   
  <section
    aria-labelledby="billing-address"
    class="grid auto-rows-max gap-3"
  >
    <h4
      class="font-semibold"
      id="billing-address"
    >
      Billing Address
    </h4>
     
    <div
      class="text-muted-foreground"
    >
      Same as shipping address
    </div>
    <!---->
  </section>
</section>
`;

exports[`renders the component with an order prop that has both shipping and billing addresses 1`] = `
<section
  aria-label="Order Addresses"
  class="flex place-content-between"
>
  <section
    aria-labelledby="shipping-address"
    class="grid gap-3"
  >
    <h4
      class="font-semibold"
      id="shipping-address"
    >
      Shipping Address
    </h4>
     
    <address
      class="space-y-0.5 not-italic text-muted-foreground"
    >
      <div>
        Firstname Lastname
      </div>
       
      <div>
        117 1st Ave.
      </div>
       
      <div>
        Phoenix, NY 60975
      </div>
    </address>
  </section>
   
  <section
    aria-labelledby="billing-address"
    class="grid auto-rows-max gap-3"
  >
    <h4
      class="font-semibold"
      id="billing-address"
    >
      Billing Address
    </h4>
     
    <address
      class="space-y-0.5 not-italic text-muted-foreground"
    >
      <div>
        Firstname Lastname
      </div>
       
      <div>
        117 1st Ave.
      </div>
       
      <div>
        Phoenix, NY 60975
      </div>
    </address>
    <!---->
  </section>
</section>
`;
